Updated to meet coding standards.

--- a/auxiliary-pages/tutorial.html
+++ b/auxiliary-pages/tutorial.html
@@ -1,22 +1,29 @@
+<!--
+  Filename: index.html
+  
+  Authors:
+    Mario Chuman		mxc7819@g.rit.edu
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Driftwood</title>
-	<link rel="stylesheet" href="css/aux-pages.css"/>
-	<link rel="icon" type="image/png" href="../assets/img/favicon.ico"/>
+  <title>About Driftwood</title>
+  <link rel="stylesheet" href="css/aux-pages.css"/>
+  <link rel="icon" type="image/png" href="../assets/img/favicon.ico"/>
 </head>
 
 <body>
-	<form id="aboutForm">
-		<img src = "../assets/images/driftwoodlogo.png"/>
-		<div id="control-group">
-				<div id="tutorial" rows="50">
-					This is the tutorial page.
-				</div>
-				<div id="controls">
-					<button class="driftwoodButtons">Back</button>
-				</div>
-		</div>
-	</form>
+  <form id="aboutForm">
+  <img src = "../assets/images/driftwoodlogo.png"/>
+  <div id="control-group">
+    <div id="tutorial" rows="50">
+      This is the tutorial page.
+    </div>
+    <div id="controls">
+      <button class="driftwoodButtons">Back</button>
+    </div>
+  </div>
+  </form>
 </body>
 </html>
