--- a/auxiliary-pages/about.html
+++ b/auxiliary-pages/about.html
@@ -1,16 +1,23 @@
+<!--
+  Filename: index.html
+  
+  Authors:
+    Mario Chuman		mxc7819@g.rit.edu
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Driftwood</title>
-	<link rel="stylesheet" href="css/aux-pages.css"/>
-	<link rel="icon" type="image/png" href="../assets/img/favicon.ico"/>
+  <title>About Driftwood</title>
+  <link rel="stylesheet" href="css/aux-pages.css"/>
+  <link rel="icon" type="image/png" href="../assets/img/favicon.ico"/>
 </head>
 
 <body>
-	<form id="aboutForm">
-		<img src = "../assets/images/driftwoodlogo.png"/>
-		<div id="control-group">
-				<textarea readonly="readonly" rows="20">
+  <form id="aboutForm">
+  <img src = "../assets/images/driftwoodlogo.png"/>
+  <div id="control-group">
+    <textarea readonly="readonly" rows="20">
 Welcome to Driftwood!
 Driftwood is an online roleplaying tool created by roleplayers for roleplayers.
 
@@ -20,47 +27,6 @@ Driftwood is built to be able to be used with many roleplaying games including D
 
 Engineered from an understanding in the feelings of being present in a virtual world, both in local and online environments, we built Driftwood to capture the social immersion that comes with playing roleplaying games with others.
 
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test2
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-Test
-
 Driftwood 2.0 was created by the following:
 Cody Van De Mark
 David Simkins
@@ -68,10 +34,10 @@ Gabrielle Bennett
 Jake Higgins
 Mario Chuman
 				</textarea>
-				<div id="controls">
-					<button class="driftwoodButtons">Back</button>
-				</div>
-		</div>
-	</form>
+    <div id="controls">
+      <button class="driftwoodButtons">Back</button>
+    </div>
+  </div>
+  </form>
 </body>
 </html>
