--- a/update/public/index.html
+++ b/update/public/index.html
@@ -1,3 +1,10 @@
+<!--
+  Filename: index.html
+  
+  Authors:
+    Mario Chuman		mxc7819@g.rit.edu
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,6 +13,7 @@
     <link rel="icon" type="image/png" href="static/images/favicon.ico"/>
         
     <script>
+      //Opens up the main page
       function enterDriftwood() {
         window.location = "http://driftwood.higginsgames.com/main.html";
       }
@@ -35,7 +43,7 @@ Mario Chuman
         </textarea>
         <div id="controls">
           <a href='http://driftwood.higginsgames.com/main.html'>Enter</a>
-	</div>
+        </div>
       </div>
     </form>
   </body>
