--- a/update/public/monster-generator/mgen.html
+++ b/update/public/monster-generator/mgen.html
@@ -1,122 +1,139 @@
-<!doctype HTML>
+<!--
+  Filename: index.html
+  
+  Authors:
+    Mario Chuman		mxc7819@g.rit.edu
+	Gabriel Bennett		gmb9280@g.rit.edu
+-->
 
+<!DOCTYPE html>
 <head>
-	<title> NPC & Monster Generator </title> 
-	<link rel="stylesheet" type="text/css" href="css/mgen.css" /> 
+  <title> NPC & Monster Generator </title> 
+  <link rel="stylesheet" type="text/css" href="css/mgen.css" /> 
 
-	<!-- Import jQuery --> 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<!-- Graph library --> 
-	<script src="js/Chart.js/Chart.js"></script>
-	<script src="js/Chart.js/src/Chart.Bar.js"></script>
+  <!-- Import jQuery --> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <!-- Graph library --> 
+  <script src="js/Chart.js/Chart.js"></script>
+  <script src="js/Chart.js/src/Chart.Bar.js"></script>
 
-	<!-- Dependencies for Pathfinder data --> 
-	<script src="js/pathfinder/modifiers.js"></script>
-	<script src="js/pathfinder/statGrowth.js"></script> 
-	<script src="js/pathfinder/characterPresets.js"></script>
-	<script src="js/characterInfo.js"></script> 
-	<script src="js/graphManager.js"></script> 
-	<!--Font-->
-	<link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
+  <!-- Dependencies for Pathfinder data --> 
+  <script src="js/pathfinder/modifiers.js"></script>
+  <script src="js/pathfinder/statGrowth.js"></script> 
+  <script src="js/pathfinder/characterPresets.js"></script>
+  <script src="js/characterInfo.js"></script> 
+  <script src="js/graphManager.js"></script> 
+  <!--Font-->
+  <link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
 </head> 
 
 <body>
 
-	<h1> Monster Generator </h1> 
-	
-	<div id="columnLeft">
-		<p>Name: <input class="userStatInputs"> </input placeholder = "Name here"> <p> 
-		<div id="picture"><img src="imgs/puppy.jpg" alt="puppy"> </div> <!-- picture, perhaps selectable from a dropdown menu of standard monster pictures or NPC pictures. --> 
-		<p>Challenge Rating: <input val="1" class="userStatInputs"></p> <!-- Challenge rating determines stat potential. -->
-		<p>Type: <input val="Abberations" class="userStatInputs"></p> <!-- Type determines what kind of monster they are -->
-		<p>Size Rating:<select class="userStatInputs" id="sizeStatInput"> <!-- Size rating determines health and damage potential -->
-			<option>Tiny</option>
-			<option>Small</option>
-			<option>Medium</option>
-			<option>Large</option>
-			<option>Huge</option>
-			<option>Gargantuan</option>
-		</select> </p>
-		<p>Alignment:<select class="userStatInputs" id="alignmentStatInput"> <!-- Classic Alignment System -->
-			<option>Unaligned</option>
-			<option>Lawful Good</option>
-			<option>Lawful Neutral</option>
-			<option>Lawful Evil</option>
-			<option>Neutral Good</option>
-			<option>True Neutral</option>
-			<option>Neutral Evil</option>
-			<option>Chaotic Good</option>
-			<option>Chaotic Neutral</option>
-			<option>Chaotic Evil</option>
-		</select> </p>
-		<p>Movement Type:<select class="userStatInputs" id="movementStatInput"> <!-- Movement type determines how the monster traverses the environment -->
-			<option>Burrow</option>
-			<option>Climb</option>
-			<option>Fly</option>
-			<option>Hover</option>
-			<option>Swim</option>
-		</select> </p>
-		<button class="userStatInputs noSelect" id="generateButton">GENERATE</button>
-	</div> 
-	
-	<div id="columnMiddle">
-	<!-- Graphs represent a percentage of maximum potential as determined by challenge rating and in the case of HP, size. 
-		DMs may increase or decrease this maximum MANUALLY by clicking plus and minus buttons next to the graphs. -->
-		
-		<!-- HP initial potential (maximum) determined by SIZE and CHALLENGE RATING --> 
-		<h2 class="noSelect">HP
-			<button class="incrementButton">+</button>
-			<button class="decrementButton">-</button>
+  <h1> Monster Generator </h1> 
 
-		</h2>
-		<canvas class='graph' id="hpGraph">
+  <div id="columnLeft">
+    <p>Name: <input class="userStatInputs"> </input placeholder = "Name here"> <p> 
+  <div id="picture"><img src="imgs/puppy.jpg" alt="puppy"> </div> <!-- picture, perhaps selectable from a dropdown menu of standard monster pictures or NPC pictures. --> 
+    <p>Challenge Rating: <input val="1" class="userStatInputs"></p> <!-- Challenge rating determines stat potential. -->
+    <p>Type: <input val="Abberations" class="userStatInputs"></p> <!-- Type determines what kind of monster they are -->
+    <p>Size Rating:
+	  <select class="userStatInputs" id="sizeStatInput"> <!-- Size rating determines health and damage potential -->
+        <option>Tiny</option>
+        <option>Small</option>
+        <option>Medium</option>
+        <option>Large</option>
+        <option>Huge</option>
+        <option>Gargantuan</option>
+      </select> 
+	</p>
+    <p>Alignment:
+	  <select class="userStatInputs" id="alignmentStatInput"> <!-- Classic Alignment System -->
+        <option>Unaligned</option>
+        <option>Lawful Good</option>
+        <option>Lawful Neutral</option>
+        <option>Lawful Evil</option>
+        <option>Neutral Good</option>
+        <option>True Neutral</option>
+        <option>Neutral Evil</option>
+        <option>Chaotic Good</option>
+        <option>Chaotic Neutral</option>
+        <option>Chaotic Evil</option>
+      </select>
+	  </p>
+    <p>Movement Type:
+      <select class="userStatInputs" id="movementStatInput"> <!-- Movement type determines how the monster traverses the environment -->
+        <option>Burrow</option>
+        <option>Climb</option>
+        <option>Fly</option>
+        <option>Hover</option>
+        <option>Swim</option>
+      </select> </p>
+    <button class="userStatInputs noSelect" id="generateButton">GENERATE</button>
+  </div> 
+	
+  <div id="columnMiddle">
+    <!-- Graphs represent a percentage of maximum potential as determined by challenge rating and in the case of HP, size. 
+      DMs may increase or decrease this maximum MANUALLY by clicking plus and minus buttons next to the graphs. -->
+		
+    <!-- HP initial potential (maximum) determined by SIZE and CHALLENGE RATING --> 
+      <h2 class="noSelect">HP
+        <button class="incrementButton">+</button>
+        <button class="decrementButton">-</button>
+      </h2>
+	  
+      <canvas class='graph' id="hpGraph">
 			
-		</canvas>
+      </canvas>
 
-		<!-- STR initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
-		<h2 class="noSelect">Strength
-			<button class="incrementButton">+</button>
-			<button class="decrementButton">-</button>
-		</h2>
-		<canvas class='graph' id="strGraph">
-		</canvas>
+    <!-- STR initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
+      <h2 class="noSelect">Strength
+        <button class="incrementButton">+</button>
+        <button class="decrementButton">-</button>
+      </h2>
+	  
+      <canvas class='graph' id="strGraph">
+	  
+      </canvas>
 		
-		<!-- CHA initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
-		<h2 class="noSelect">Charisma
-			<button class="incrementButton">+</button>
-			<button class="decrementButton">-</button>
-		</h2>
-		<canvas class='graph' id="chaGraph">
-		</canvas>
-	</div> 
+    <!-- CHA initial maximum determined by CHALLENGE RATING; can be increased / decreased --> 
+      <h2 class="noSelect">Charisma
+      <button class="incrementButton">+</button>
+      <button class="decrementButton">-</button>
+      </h2>
+	  
+      <canvas class='graph' id="chaGraph">
+	  
+      </canvas>
+  </div> 
 	
-	<div id="columnRight">		
-		
+  <div id="columnRight">			
+    <!-- DEX initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+    <h2 class="noSelect">Dexterity
+      <button class="incrementButton">+</button>
+      <button class="decrementButton">-</button>
+    </h2>
 
-		<!-- DEX initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<h2 class="noSelect">Dexterity
-			<button class="incrementButton">+</button>
-			<button class="decrementButton">-</button>
-		</h2>
-		<canvas class='graph' id="dexGraph">
-		</canvas>
+    <canvas class='graph' id="dexGraph">
+    </canvas>
 
-		<!-- INT initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<h2 class="noSelect">Intelligence
-			<button class="incrementButton">+</button>
-			<button class="decrementButton">-</button>
-		</h2>
-		<canvas class='graph' id="intGraph">
-		</canvas>
+    <!-- INT initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+      <h2 class="noSelect">Intelligence
+        <button class="incrementButton">+</button>
+        <button class="decrementButton">-</button>
+      </h2>
 
-		<!-- WIS initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
-		<h2 class="noSelect">Wisdom
-			<button class="incrementButton">+</button>
-			<button class="decrementButton">-</button>
-		</h2>
-		<canvas class='graph' id="wisGraph">
-		</canvas> 
-	</div> 
+	  <canvas class='graph' id="intGraph">
+      </canvas>
+
+    <!-- WIS initial maximum determined by CHALLENGE RATING; can be increased / decreased -->
+      <h2 class="noSelect">Wisdom
+        <button class="incrementButton">+</button>
+        <button class="decrementButton">-</button>
+      </h2>
+	  
+    <canvas class='graph' id="wisGraph">
+    </canvas> 
+  </div> 
 	
 </body> 
 </html> 
