Readded the tutorial page, added the terms page, updated css to be closer to the style of the original site, and added button links for navigation.

--- a/update/public/index.html
+++ b/update/public/index.html
@@ -42,7 +42,10 @@ Jake Higgins
 Mario Chuman
         </textarea>
         <div id="controls">
-          <a href='http://driftwood.higginsgames.com/main.html'>Enter</a>
+        <button class="driftwoodButtons"><a class="driftwoodLink" href="http://driftwood.higginsgames.com/main.html">Enter</a></button>
+		<button class="driftwoodButtons"><a class="driftwoodLink" href="tutorial.html">Tutorial</a></button>
+		<button class="driftwoodButtons"><a class="driftwoodLink" href="terms.html">Terms</a></button>
+
         </div>
       </div>
     </form>
