--- a/update/public/tutorial.html
+++ b/update/public/tutorial.html
@@ -1,5 +1,5 @@
 <!--
-  Filename: index.html
+  Filename: tutorial.html
   
   Authors:
     Mario Chuman		mxc7819@g.rit.edu
@@ -18,6 +18,7 @@
   <img src = "static/images/driftwoodlogo.png"/>
   <div id="control-group">
     <div id="tutorial" rows="50">
+	  Welcome to the Driftwood tutorial! We will show you the basics to fully use the tool.
       This is the tutorial page.
     </div>
     <div id="controls">
