Added movement with new system
+ Images and stokes now supported with movement
+ BUG: Images freak out on first movement
+ Fixed bug to allow clearing again

--- a/update/public/main.html
+++ b/update/public/main.html
@@ -158,7 +158,7 @@
       <div id='tool-container' class='absolute' style='z-index:3'> 
         <input type='file' id='image-upload'></input>
         <button id='image-upload-submit' onclick='FileIO.uploadImage()'>Upload Image</button>
-        <button id='clear-room' onclick='CanvasManager.clear()'>Clear Room</button>
+        <button id='clear-room' onclick='CanvasManager.clear(false)'>Clear Room</button>
       </div>
       <div id="monsteredit">
         <h1><span id="monstertitle"> MONSTERNAME</span><div id="saveicon"></div><div id="xicon"></div></h1>
