Changed monster generator to prototype objects Removed references to monster-generator.js, added monsters.js

--- a/update/public/main.html
+++ b/update/public/main.html
@@ -17,8 +17,6 @@
 
     <script src="static/resources/bestiary-clean.js"></script>
 
-    <script src="static/scripts/monster-generator.js"></script> 
-
     <script type="text/javascript" src="static/scripts/main.js"></script>
     <script type="text/javascript" src="static/scripts/driftwood.js"></script>
 
@@ -30,6 +28,7 @@
     <script type="text/javascript" src="static/scripts/grid.js"></script>
     <script type="text/javascript" src="static/scripts/helper.js"></script>
     <script type="text/javascript" src="static/scripts/layer.js"></script>
+    <script src="static/scripts/monsters.js"></script>
     <script type="text/javascript" src="static/scripts/object.js"></script>
     <script type="text/javascript" src="static/scripts/object-manager.js"></script>
     <script type="text/javascript" src="static/scripts/socket.js"></script>
