Added monster.js to create monster objects

--- a/update/public/main.html
+++ b/update/public/main.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="static/scripts/grid.js"></script>
     <script type="text/javascript" src="static/scripts/helper.js"></script>
     <script type="text/javascript" src="static/scripts/layer.js"></script>
+    <script type="text/javascript" src="static/scripts/monster.js"></script>
     <script type="text/javascript" src="static/scripts/object.js"></script>
     <script type="text/javascript" src="static/scripts/object-manager.js"></script>
     <script type="text/javascript" src="static/scripts/socket.js"></script>
